# average-price-calculator

./: .coverage  .env.example  .pre-commit-config.yaml  DEVELOPMENT.md  Makefile  README.md  cookiecutter-config-file.yml  pyproject.toml  requirements.project.txt  streamlit_app.py
average_price_calculator/: __init__.py  calculator.py  cli.py  config.py   example.py  models.py  paths.py
average_price_calculator/settings/: __init__.py  notebook.py
configs/: config_sample.yml
notebooks/: example.ipynb
scripts/: config_sample.py
tests/: __init__.py
tests/test_example/: test_calculator.py
tests/unit/: __init__.py  test_calculator.py
