# Poetry pyproject.toml: https://python-poetry.org/docs/pyproject/
[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "average-price-calculator"
version = "0.1.0"
description = "A tool for calculating weighted average prices after additional purchases"
readme = "README.md"
authors = ["Aram Aleksanyan <Aram.Aleksanyan@waveaccess.global>"]
license = "MIT"
repository = "https://github.com/aramasala/average-price-calculator"
homepage = "https://github.com/aramasala/average-price-calculator"
documentation = "https://github.com/aramasala/average-price-calculator#readme"

keywords = ["finance", "calculator", "investment", "average-price", "portfolio"]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Office/Business :: Financial :: Investment",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
pydantic = "^2.5.0"
pydantic-settings = "^2.10.1"

[tool.poetry.group.dev.dependencies]
python-dotenv = "^1.1.1"
pre-commit = "^4.3.0"
pytest = "^8.4.0"
pytest-cov = "^5.0.0"
pytest-mock = "^3.14.0"
envyaml = "^1.10.3110"
black = "^25.1.0"
isort = {extras = ["colors"], version = "^6.0.0"}
ruff = "^0.12.0"
mypy = "^1.17.0"
ipykernel = "^6.29.5"
jupyter = "^1.1.1"
jupyter-client = "==6.1.12"
jupyter_contrib_nbextensions = "^0.5.1"
nbconvert = "5.6.1"
jinja2 = "3.0.3"
nbdime = "^4.0.2"
typer = {extras = ["all"], version = "^0.12.0"}
rich = "^13.7.1"
streamlit = "^1.36.0"

[tool.poetry.scripts]
avg-price-calc = "average_price_calculator.cli:app"

[tool.ruff]
exclude = [
    ".bzr", ".direnv", ".eggs", ".git", ".git-rewrite", ".hg",
    ".ipynb_checkpoints", ".mypy_cache", ".nox", ".pants.d",
    ".pyenv", ".pytest_cache", ".pytype", ".ruff_cache", ".svn",
    ".tox", ".venv", ".vscode", "__pypackages__", "_build",
    "buck-out", "build", "dist", "node_modules", "site-packages",
    "venv", "migrations/*",
]

line-length = 100
indent-width = 4
target-version = "py312"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "ANN", "G004", "D401", "RET504", "ISC001", "D106",
  "EM101", "COM812", "TRY003",
]
exclude = [".additional/*"]
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S", "D", "INP001"]
"average_price_calculator/__init__.py" = ["D400", "D103"]
"scripts/*" = ["BLE001", "D", "INP001", "LOG"]
"average_price_calculator/settings.py" = ["D106"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
docstring-code-line-length = "dynamic"

[tool.black]
target-version = ["py312"]
line-length = 100
color = true
exclude = '''
/(\.git|\.hg|\.mypy_cache|\.tox|\.venv|_build|
  buck-out|build|dist|env|venv)/
'''

[tool.mypy]
python_version = "3.12"
files = [
  "average_price_calculator",
  "tests",
  "streamlit_app.py"
]
pretty = true
show_traceback = true
color_output = true
allow_redefinition = false
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
ignore_missing_imports = true
implicit_reexport = false
no_implicit_optional = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
strict_equality = true
strict_optional = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = ["streamlit", "typer", "rich"]
ignore_missing_imports = true

[tool.pytest.ini_options]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
norecursedirs = ["hooks", "*.egg", ".eggs", "dist", "build", "docs", ".tox", ".git", "__pycache__"]
doctest_optionflags = ["NUMBER", "NORMALIZE_WHITESPACE", "IGNORE_EXCEPTION_DETAIL"]
addopts = [
  "--strict-markers",
  "--tb=short",
  "--doctest-modules",
  "--doctest-continue-on-failure",
  "--cov=average_price_calculator",
  "--cov-report=term-missing",
  "--cov-report=html",
]
testpaths = ["tests"]
markers = [
  "slow: marks tests as slow (deselect with '-m \"not slow\"')",
  "integration: integration tests",
  "unit: unit tests",
]